--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.18.0",
     "eslint-config-airbnb": "^17.1.0",
     "react": "^16.8.6",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
